examples/test/testpolicy15178.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15178
  namespace: namespace287
spec:
  podSelector:
    matchLabels:
      key49: value34
      key28: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value16
          key16: value25
          key14: value19
      podSelector:
        matchLabels:
          key48: value33
          key35: value25
